[package]
name = "threadbound"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Make any value Sync but only available on its original thread."
repository = "https://github.com/dtolnay/threadbound"
documentation = "https://docs.rs/threadbound"
categories = ["rust-patterns"]
readme = "README.md"
