[package]
name = "threadbound"
version = "0.1.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["concurrency", "rust-patterns"]
description = "Make any value Sync but only available on its original thread."
documentation = "https://docs.rs/threadbound"
edition = "2021"
keywords = ["sync"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/threadbound"
rust-version = "1.68"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
